--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -15,39 +15,19 @@
     margin: auto;
 }
 
+$admonition-color-list:
+  "note" #448aff rgba(68, 138, 255, 0.1),
+  "abstract" #00b0ff rgba(0, 176, 255, 0.1),
+  "info" #00b8d4 rgba(83, 211, 230, 0.1),
+  "tip" #00bfa5 rgba(0, 191, 165, 0.1),
+  "success" #00c853 rgba(0, 200, 83, 0.1),
+  "question" #64dd17 rgba(100, 221, 23, 0.1),
+  "warning" #ff9100 rgba(255, 145, 0, 0.1),
+  "failure" #ff5252 rgba(255, 82, 82, 0.1),
+  "danger" #ff1744 rgba(68, 138, 255, 0.1),
+  "bug" #f50057 rgba(255, 23, 68, 0.1),
+  "example" #651fff rgba(101, 31, 255, 0.1),
+  "quote" #9e9e9e rgba(159, 159, 159, 0.1),
+  !default;
 
-
-[data-scheme="light"] {
-    $color: #444;
-
-    $noteTitleBgColor: #6ab0de;
-    $noteBgColor: #e7f2fa;
-
-    $tipTitleBgColor: rgba(92, 184, 92, .8);
-    $tipBgColor: #e6f9e6;
-
-    $warnTitleBgColor: rgba(217, 83, 79, .9);
-    $warnBgColor: #fae2e2;
-
-    $infoTitleBgColor: #f0b37e;
-    $infoBgColor: #fff2db;
-    @import "notice.scss";
-}
-
-[data-scheme="dark"] {
-    $color: #eee;
-
-    $noteTitleBgColor: #125d8f;
-    $noteBgColor: #446c8a;
-
-    $tipTitleBgColor: rgba(11, 90, 11, 0.8);
-    $tipBgColor: #4d584d;
-
-    $warnTitleBgColor: rgba(148, 23, 19, 0.9);
-    $warnBgColor: #815f5f;
-
-    $infoTitleBgColor: #9c5313;
-    $infoBgColor: #ac9775;
-    @import "notice.scss";
-
-}
+@import "notice.scss"
