--- a/assets/scss/notice.scss
+++ b/assets/scss/notice.scss
@@ -1,73 +1,72 @@
+.admonition {
+  position: relative;
+  margin: 1rem 0;
+  padding: 0 .75rem;
+  border-left: .25rem solid;
+  overflow: auto;
 
-.notice {
-    padding: 18px;
-    line-height: 24px;
-    margin-bottom: 24px;
-    border-radius: 4px;
-    color: $color;
-    background: #e7f2fa
-}
+  .admonition-title {
+    font-weight: bold;
+    margin: 0 -0.75rem;
+    padding: .25rem 1.8rem;
+  }
 
-.notice p:last-child {
-    margin-bottom: 0
-}
+  .admonition-content {
+    padding: .5rem 0;
+  }
 
-.notice-title {
-    margin: -18px -18px 12px;
-    padding: 4px 18px;
-    border-radius: 4px 4px 0 0;
-    font-weight: 700;
-    color: #fff;
-    background: #6ab0de
-}
+  i.icon {
+    font-size: 0.85rem;
+    position: absolute;
+    top: .6rem;
+    left: .4rem;
+  }
 
-.notice.warning .notice-title {
-    background: $warnTitleBgColor;
-}
+  i.details-icon {
+    position: absolute;
+    top: .6rem;
+    right: .3rem;
+  }
 
-.notice.warning {
-    background: $warnBgColor;
-}
+  @each $type, $color, $background-color in $admonition-color-list {
+    @if $type == "note" {
+      background-color: $background-color;
+      border-left-color: $color;
 
-.notice.info .notice-title {
-    background: $infoTitleBgColor;
-}
+      .admonition-title {
+        border-bottom-color: $background-color;
+        background-color: opacify($background-color, 0.15);
+      }
 
-.notice.info {
-    background: $infoBgColor;
-}
+      &.open .admonition-title {
+        background-color: $background-color;
+      }
 
-.notice.note .notice-title {
-    background: $noteTitleBgColor;
-}
+      i.icon {
+        color: $color;
+      }
+    } @else {
+      &.#{$type} {
+        background-color: $background-color;
+        border-left-color: $color;
 
-.notice.note {
-    background: $noteBgColor;
-}
+        .admonition-title {
+          border-bottom-color: $background-color;
+          background-color: opacify($background-color, 0.15);
+        }
 
-.notice.tip .notice-title {
-    background: $tipTitleBgColor;
-}
+        &.open .admonition-title {
+          background-color: $background-color;
+        }
 
-.notice.tip {
-    background: $tipBgColor;
-}
+        i.icon {
+          color: $color;
+        }
+      }
+    }
+  }
 
-.icon-notice {
-    display: inline-flex;
-    align-self: center;
-    margin-right: 8px
-}
-
-.icon-notice img,
-.icon-notice svg {
-    height: 1em;
-    width: 1em;
-    fill: currentColor
-}
-
-.icon-notice img,
-.icon-notice.baseline svg {
-    top: 0.125em;
-    position: relative
+  &:last-child {
+    margin-bottom: .75rem;
+  }
 }
