--- a/assets/scss/notice.scss
+++ b/assets/scss/notice.scss
@@ -8,7 +8,7 @@
   .admonition-title {
     font-weight: bold;
     margin: 0 -0.75rem;
-    padding: .25rem 1.8rem;
+    padding: .25rem 1.8rem .25rem 2.8rem;
   }
 
   .admonition-content {
@@ -16,9 +16,9 @@
   }
 
   i.icon {
-    font-size: 0.85rem;
+    font-size: 1.4rem;
     position: absolute;
-    top: .6rem;
+    top: 1rem;
     left: .4rem;
   }
 
