--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -1,3 +1,4 @@
 {{ range .Site.Params.customCSS }}
     <link rel="stylesheet" href="{{ . | absURL }}">
 {{- end }}
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
