--- a/layouts/shortcodes/notice.html
+++ b/layouts/shortcodes/notice.html
@@ -30,7 +30,7 @@
     {{- $type := .Get 0 | default "note" -}}
     <div class="details admonition {{ $type }}{{ if .Get 2 | ne false }} open{{ end }}">
         <div class="details-summary admonition-title">
-            <i class="icon {{ index $iconMap $type | default (index $iconMap "note") }}" aria-hidden="true"></i>{{ .Get 1 | default (T $type) }}<i class="details-icon {{ $iconDetails }}" aria-hidden="true"></i>
+            <i class="icon {{ index $iconMap $type | default (index $iconMap "note") }}" aria-hidden="true"></i>{{ .Get 1 | default (T $type) }}
         </div>
         <div class="details-content">
             <div class="admonition-content">
