--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,5 +1,5 @@
 :root {
-    --accent-color: #96340d;
+    --accent-color: #095898;
 
     --base-font-family: 'Noto Sans SC', var(--sys-font-family), var(--zh-font-family), sans-serif;
     --article-font-size: 1.6rem;
