--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,5 +1,6 @@
 :root {
     --accent-color: #095898;
+    --body-text-color: #3c3c3c;
 
     --base-font-family: 'Noto Sans SC', var(--sys-font-family), var(--zh-font-family), sans-serif;
     --article-font-size: 1.6rem;
@@ -13,6 +14,23 @@
 .img-center {
     display: block;
     margin: auto;
+}
+
+.bilibili {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 75%;
+  margin: 3% auto;
+  text-align: center;
+
+  iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+  }
 }
 
 $admonition-color-list:
